src/test/deca/context/valid/assign_field_into_list_decl_field.deca
/*
    Description : assignation dans une liste de déclaration de field avec une valeur déclarée précédemment

    Résultat : OK
*/
class A{
    int x = 2, y = 3, z = x;
}
